setting up css sheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>Taco 'bout the Weather: Recipes and Forecasts</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <header>
