--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
           <h1>Taco 'bout the Weather: serving up taco recipes that match the atmospheric conditions of the day</h1>
           <img src="smileytaco.jpg" alt="smiley cartoon taco">
       </header>
-      <section>
+      <section class="forecast">
           <h2>Today's Weather Forecast</h2>
           <p>Enter your ZIP</p>
           <p>This is the weather in your area</p>
       </section>
-      <section>
+      <section class="taco"> 
           <h2>That sounds like great weather to make this taco!</h2>
           <p>Taco recipe</p>
       </section>
